WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 106018
[Qt] Fix a crash when the QQuickWebPage is destroyed between the scene graph sync and render.
https://bugs.webkit.org/show_bug.cgi?id=106018
Summary
[Qt] Fix a crash when the QQuickWebPage is destroyed between the scene graph ...
Jocelyn Turcotte
Reported
2013-01-03 07:35:43 PST
[Qt] Fix a crash when the QQuickWebPage is destroyed between the scene graph sync and render.
Attachments
Patch
(4.94 KB, patch)
2013-01-03 07:43 PST
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2013-01-03 07:43:42 PST
Created
attachment 181175
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-03 10:18:41 PST
Comment on
attachment 181175
[details]
Patch Clearing flags on attachment: 181175 Committed
r138715
: <
http://trac.webkit.org/changeset/138715
>
WebKit Review Bot
Comment 3
2013-01-03 10:18:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug