Source/WebKit2/UIProcess/qt/QtWebPageSGNode.cpp
@@ -126,10 +126,10 @@ private:
     RefPtr<LayerTreeRenderer> m_renderer;
 };
 
-QtWebPageSGNode::QtWebPageSGNode(const QQuickItem* item)
+QtWebPageSGNode::QtWebPageSGNode()
     : m_contentsNode(0)
     , m_backgroundNode(new QSGSimpleRectNode)
-    , m_item(item)
+    , m_devicePixelRatio(1)
 {
     appendChildNode(m_backgroundNode);
 }
@@ -145,13 +145,6 @@ void QtWebPageSGNode::setScale(float scale)
     QMatrix4x4 matrix;
     matrix.scale(scale);
     setMatrix(matrix);
-}
-
-qreal QtWebPageSGNode::devicePixelRatio() const
-{
-    if (const QWindow* window = m_item->window())
-        return window->devicePixelRatio();
-    return 1;
 }
 
 void QtWebPageSGNode::setRenderer(PassRefPtr<LayerTreeRenderer> renderer)
